--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,15 +1,5 @@
 blank_issues_enabled: false
-contact_links: []
-issue_templates:
-  - name: "Bug report"
-    description: "Report a bug with the tsconfig"
-    labels: ["bug"]
-    title: "[BUG] - "
-    about: "Use this template to report a bug."
-    file: "bug_report.md"
-  - name: "Feature request"
-    description: "Request a new compiler option or feature for the tsconfig"
-    labels: ["enhancement"]
-    title: "[FEATURE] - "
-    about: "Use this template to request a new compiler option or feature."
-    file: "feature_request.md"
+contact_links: 
+  - name: Questions and discussion
+    url: https://github.com/Mann-Conomy/tsconfig/discussions/categories/q-a
+    about: Please use GitHub Discussions to ask and answer questions.
